// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Project Update Command - Help Text 1`] = `
"stdout:
"Usage: project update [options] <projectId>

Update a Linear project

Arguments:
  projectId                        Project ID or slug

Options:
  -n, --name <name>                Project name
  -d, --description <description>  Project description (max 255 characters,
                                   enforced by Linear's API)
  -f, --description-file <path>    Read project description from file (still
                                   subject to the 255-character API limit)
  -s, --status <status>            Status (planned, started, paused, completed,
                                   canceled, backlog)
  -l, --lead <lead>                Project lead (username, email, or @me)
  --start-date <startDate>         Start date (YYYY-MM-DD)
  --target-date <targetDate>       Target date (YYYY-MM-DD)
  -t, --team <team>                Team key (can be repeated for multiple teams)
  --label <label>                  Replace the project's labels. May be repeated
                                   to set multiple labels.
  -h, --help                       display help for command
"
stderr:
"""
`;

exports[`Project Update Command - Update Name 1`] = `
"stdout:
"✓ Updated project: Updated Project Name
https://linear.app/test/project/updated-proj
"
stderr:
"""
`;

exports[`Project Update Command - Update Description 1`] = `
"stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-desc
"
stderr:
"""
`;

exports[`Project Update Command - Update Status 1`] = `
"stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-status
"
stderr:
"""
`;

exports[`Project Update Command - Replace Labels 1`] = `
"stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-labels
"
stderr:
"""
`;
